--- a/movies/templates/movies/search_results.html
+++ b/movies/templates/movies/search_results.html
@@ -4,9 +4,24 @@
 <div class="container mt-4">
     <h2>Search Results for "{{ query }}"</h2>
 
-    {% if results %}
+    {% if local_results %}
+        <h4>Local Movies:</h4>
+        <ul class="list-group mb-4">
+            {% for movie in local_results %}
+                <li class="list-group-item">
+                    <a href="{% url 'movie_detail' movie.id %}">
+                        {{ movie.title }} ({{ movie.release_year|default:"N/A" }})
+                    </a>
+                    <p>{{ movie.description|truncatewords:20 }}</p>
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
+    {% if tmdb_results %}
+        <h4>TMDB Results:</h4>
         <ul class="list-group">
-            {% for movie in results %}
+            {% for movie in tmdb_results %}
                 <li class="list-group-item">
                     <a href="{% url 'movie_detail' movie.id %}">
                         {{ movie.title }} ({{ movie.release_date|default_if_none:"N/A"|slice:":4" }})
@@ -15,7 +30,9 @@
                 </li>
             {% endfor %}
         </ul>
-    {% else %}
+    {% endif %}
+
+    {% if not local_results and not tmdb_results %}
         <p>No movies found for "{{ query }}".</p>
     {% endif %}
 </div>
